# Wine---price-ratings-prediction

./: .gitignore  Amazon Wine Dataset - Initial EDA - Zach Grammer(1).ipynb  LICENSE  README.md  Wine Retail Dataset - Neural Network Embeddings -Aidan Riordan - Kyle Rees -.ipynb  Wine Retail Dataset - Neural Network Embeddings -Aidan Riordan - Kyle Rees(1).ipynb  Wine Retail Dataset - XGBoost - main approach.ipynb  Wine Retail Dataset - XGBoost(2).ipynb  pyproject.toml  requirements.txt
notebooks/: Wine Retail Dataset - Custom Embeddings + Custom CNN - Andrew Berg.ipynb  Wine Retail Dataset - Initial EDA - Zach Grammer.ipynb  Wine Retail Dataset - Neural Network Embeddings -Aidan Riordan - Kyle Rees.ipynb  Wine Retail Dataset - Sentiment + XGboost - Andrew Berg.ipynb  Wine Retail Dataset - XGBoost - main approach.ipynb
