[project]
name = "wine-and-dine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "datasets>=3.2.0",
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "numpy==1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pip>=24.3.1",
    "protobuf>=5.29.2",
    "psutil==5.9.0",
    "scikit-learn==1.3.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.3.1",
    "textblob>=0.18.0.post0",
    "torch>=2.5.1",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.6.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
    "xgboost==2.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
